# XRoboToolkit-PC-Service-Pybind

./: .gitignore  CMakeLists.txt  README.md  example_body_tracking.py  setup.py  setup.sh  setup_ubuntu.sh  setup_windows.bat
bindings/: py_bindings.cpp
data/: xr_tracking_20250909_191126.json
examples/: publisher.py  run_binding_continuous.py  track.py
lib/: PXREARobotSDK.h
lib/aarch64/: PXREARobotSDK.h
python/: test_binding.py
